# Oanda-trading-bot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
config/: config.json  config_backtest.json  config_optimize.json
src/dbmodels/: trade.py
src/oandatradingbot/: __main__.py  config.json  config_backtest.json  config_optimize.json  oandabot.py
src/oandatradingbot/backtester/: __main__.py  backtester.py  summarizer.py
src/oandatradingbot/dbmodels/: trade.py
src/oandatradingbot/optimizer/: __main__.py  optimizer.py  summarizer_opt.py
src/oandatradingbot/repository/: base.py  repository.py  trade.py
src/oandatradingbot/strategies/: backtest_save_results.py  base_backtest_strategy.py  base_strategy.py  macd_ema_atr.py  macd_ema_atr_backtest.py  macd_ema_atr_live.py
src/oandatradingbot/types/: api_transaction.py  config.py  order.py  trade.py
src/oandatradingbot/utils/: config_checker.py  financial_feed.py  instrument_manager.py  instrument_units.py  messages.py  order_manager.py  order_manager_backtest.py  summarizer.py  telegram_bot.py  transaction_manager.py  tts.py
src/tradingbot/: config.json  oandabot.py
src/utils/: cash_manager.py  instrument_manager.py  messages.py  order_manager.py  spread_scrapper.py  telegram_bot.py  tts.py
tests/: test_backtester.py  test_cash_manager.py  test_config.py  test_db.py  test_financial_feed.py  test_instrument_manager.py  test_messages.py  test_oandabot.py  test_optimizer.py  test_order_manager.py  test_spread_scrapper.py  test_telegram_bot.py  test_tts.py  trades.py
