[metadata]
name = Oanda trading bot
description = A trading (forex and cryptocurrencies) bot based on backtrader to operate within the Oanda platform
author =  Víctor Auñón
author_email = hola@victoraunon.com
license = MIT
version = 0.1.1
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
packages = tradingbot, utils, dbmodels
install_requires = 
    backtrader>=1.9.70
    beautifulsoup4>=4.9
    btoandav20 @ git+https://github.com/happydasch/btoandav20
    pyppeteer>=1
    pyttsx3>=2.90
    requests>=2
    SQLAlchemy>=1.4.30
    types-requests>=2.27.20
    yfinance>=0.1.70
python_requires = >=3.7
package_dir = 
    = src
zip_safe = no

[options.extras_require]
testing =
    flake8>=4.0
    mypy>=0.910
    pytest>=7.0
    pytest-cov>=3.0
    tox>=3.24

[options.package_data]
tradingbot = py.typed
utils = py.typed
dbmodels = py.typed
