[metadata]
name = oandatradingbot
description = A trading (forex and cryptocurrencies) bot based on backtrader to operate within the Oanda platform
long_description = file: README.md
long_description_content_type = text/markdown
author =  Víctor Auñón
author_email = hola@victoraunon.com
license = MIT
version = 1.5.6
url = https://github.com/victor-aunon/Oanda-trading-bot
classifiers = 
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
packages = oandatradingbot, oandatradingbot.utils, oandatradingbot.repository, oandatradingbot.strategies, oandatradingbot.backtester, oandatradingbot.optimizer, oandatradingbot.types
install_requires = 
    backtrader==1.9.76.123
    btoandav20 @ git+https://github.com/happydasch/btoandav20
    fsspec>=2022
    matplotlib==3.2.2
    openpyxl==3.0.10
    pyttsx3>=2.90
    requests>=2
    SQLAlchemy>=1.4.30
    types-requests>=2.27.20
    xlsxwriter==3.0.3
    yfinance>=0.1.70
    pandas==1.4.4
python_requires = >=3.8
package_dir = 
    = src
zip_safe = no

[options.extras_require]
testing =
    flake8>=4.0
    mypy>=0.910
    pytest>=7.0
    pytest-cov>=3.0
    tox>=3.24

[options.package_data]
oandatradingbot = py.typed
oandatradingbot.utils = py.typed
oandatradingbot.repository = py.typed
oandatradingbot.strategies = py.typed
oandatradingbot.backtester = py.typed
oandatradingbot.optimizer = py.typed
oandatradingbot.types = py.typed
